[gd_scene load_steps=14 format=2]

[ext_resource path="res://abilities/Boost.tscn" type="PackedScene" id=1]
[ext_resource path="res://sound/zipper1.wav" type="AudioStream" id=2]
[ext_resource path="res://worm/spawn_kinematic.gd" type="Script" id=3]
[ext_resource path="res://worm/TailKinematic.tscn" type="PackedScene" id=4]
[ext_resource path="res://worm/HeadKinematic.tscn" type="PackedScene" id=5]
[ext_resource path="res://worm/SegmentKinematic.tscn" type="PackedScene" id=6]
[ext_resource path="res://worm/WormCamera.tscn" type="PackedScene" id=7]
[ext_resource path="res://abilities/Bite.tscn" type="PackedScene" id=8]
[ext_resource path="res://sound/segment_death1.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/death_roar1.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/take_damage1.wav" type="AudioStream" id=12]
[ext_resource path="res://sound/layer_down.wav" type="AudioStream" id=13]
[ext_resource path="res://sound/layer_up.wav" type="AudioStream" id=14]

[node name="SpawnKinematic" type="Position2D"]
script = ExtResource( 3 )
camera = ExtResource( 7 )
Segment = ExtResource( 6 )
Head = ExtResource( 5 )
Tail = ExtResource( 4 )
speed_decay = 0.9

[node name="AbilitiesContainer" type="Node" parent="."]

[node name="BoostAbility" parent="AbilitiesContainer" instance=ExtResource( 1 )]

[node name="Bite" parent="AbilitiesContainer" instance=ExtResource( 8 )]

[node name="DiveTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="SegmentTakeDamage" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 12 )
volume_db = -30.0

[node name="ChangeLayerUp" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 14 )
volume_db = -30.0

[node name="ChangeLayerDown" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = -30.0

[node name="Slither" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 2 )
volume_db = -30.0

[node name="SegmentDeath" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 10 )
volume_db = -30.0

[node name="HeadDeath" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -30.0

[connection signal="timeout" from="DiveTimer" to="." method="_on_DiveTimer_timeout"]
